--- a/codecss.css
+++ b/codecss.css
@@ -1,15 +1,15 @@
-/* Reset default margin and padding for all elements and set background color */
+
 body {
-    font-family: Arial, sans-serif; /* Specify font family */
+    font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f0f0f0; /* Light gray background color */
-    color: #333; /* Text color */
+    background-color: #f0f0f0;
+    color: #333; 
 }
 
-/* Styling for the header */
+
 header {
-    background-color: #800080; /* Purple color */
+    background-color: #800080; 
     padding: 10px 0;
     height: 43px;
 }
@@ -21,74 +21,74 @@ nav ul {
 }
 
 nav ul li {
-    display: inline-block; /* Display list items inline */
-    margin-right: 20px; /* Add margin between list items */
+    display: inline-block; 
+    margin-right: 20px; 
 }
 
 nav ul li a {
-    color: #fff; /* Text color */
+    color: #fff;
     text-decoration: none;
 }
 
-/* Styling for image containers */
+
 .image-container {
-    max-width: 100%; /* Set maximum width to prevent image from overflowing */
-    overflow: hidden; /* Hide any overflowing content */
+    max-width: 100%; 
+    overflow: hidden; 
     margin-bottom: 100px;
 }
 
-/* Styling for images within image containers */
+
 .image-container img {
-    width: 1500px; /* Make image fill the container's width */
-    height: 500px; /* Maintain aspect ratio */
-    display: block; /* Ensure proper rendering */
+    width: 1500px; 
+    height: 500px; 
+    display: block; 
 }
 
-/* Styling for the footer */
+
 footer {
-    background-color: #800080; /* Purple color */
-    color: #fff; /* Text color */
-    text-align: center; /* Align text to center */
-    padding: 10px 0; /* Add padding */
+    background-color: #800080; 
+    color: #fff; 
+    text-align: center; 
+    padding: 10px 0;
 }
 
-/* Additional styling for marquee element */
+
 marquee {
-    font-family: 'Times New Roman', Times, serif; /* Specify font family */
-    font-weight: bold; /* Make text bold */
+    font-family: 'Times New Roman', Times, serif; 
+    font-weight: bold; 
 }
 
-/* Styling for post-info section */
+
 .post-info {
     margin: 20px;
 
 }
 
-/* Styling for post-info headings */
+
 .post-info h3 {
     font-size: 20px;
     margin-bottom: 10px;
 }
 
-/* Styling for post-info list */
+
 .post-info ul {
     list-style: none;
     padding: 0;
 }
 
-/* Styling for post-info list items */
+
 .post-info ul li {
     margin-bottom: 8px;
 }
 
-/* Styling for post-info links */
+
 .post-info a {
     text-decoration: none;
     color: #333;
     font-weight: bold;
 }
 
-/* Styling for post-info links on hover */
+
 .post-info a:hover {
     text-decoration: underline;
 }
