--- a/discussions.css
+++ b/discussions.css
@@ -1,5 +1,3 @@
-/* discussions.css */
-
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -7,7 +5,7 @@ body {
 }
 
 header {
-    background-color: #800080; /* Purple color */
+    background-color: #800080; 
     padding: 10px 0;
     height: 43px;
     margin-bottom: 20px;
@@ -99,12 +97,12 @@ footer {
     margin-bottom: 0;
 }
 
-/* Styles for the quiz button */
+
 .quiz-button {
     position: fixed;
     right: 20px;
     bottom: 20px;
-    padding: 15px 20px; /* Increased padding for better visibility */
+    padding: 15px 20px; 
     background-color: #f00;
     color: #fff;
     border: none;
